--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ color: white;
 img{
     height: 300px;
     width: 300px;
-
-
+    border-radius: 50px;
+    box-shadow: 8px 8px 10px grey;
+    margin: 4px 4px 4px 4px;
 }
